Infra-Clinic/k8s-manifests/development/pgadmin/pgadmin-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-d-service
  namespace: ptcc-development
  labels:
    app: pgadmin-dev
    project: "ProntDental"
    environment: "development"
spec:
  selector:
    app: pgadmin-dev
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
